# Transcend-Rover

./: CONTRIBUTING.md  LICENSE  README.md
Docs/: PHASES.md
ESP32_Firmware/transcend_esp32_microros/: transcend_esp32_microros.ino
ESP32_Firmware/transcend_esp32_pid/: transcend_esp32_pid.ino
Images/: README.txt
src/transcend_bringup/: CMakeLists.txt  package.xml
src/transcend_bringup/config/: gazebo_bridge.yaml  transcend_config.rviz  transcend_controllers.yaml  ydlidar_x4.yaml
src/transcend_bringup/launch/: rover_pi.launch.xml
src/transcend_description/: CMakeLists.txt  package.xml
src/transcend_description/urdf/: common_properties.xacro  mobile_base.xacro  ros2_control_snippet.xacro  rover.urdf.xacro  rover_gaz.xacro
src/transcend_hardware/: CMakeLists.txt  WheelVelocity.msg  package.xml  transcend_controllers.yaml  transcend_hardware_plugin.xml
src/transcend_hardware/include/: transcend_hardware_interface.hpp
src/transcend_hardware/src/: transcend_hardware_interface.cpp
