<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>transcend_hardware</name>
  <version>0.1.0</version>
  <description>
    ros2_control hardware interface for Transcend robot.
    Bridges diff_drive_controller to ESP32 via micro_ROS UDP.
    Uses std_msgs/Float32MultiArray — no custom message build required.
  </description>
  <maintainer email="your@email.com">Mayank Jain</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>